Fixed spacing between food name and X in popup

--- a/styles.css
+++ b/styles.css
@@ -254,10 +254,11 @@ input[type="checkbox"] {
 }
 
 .popup-content > #popup-title {
-  margin-top: 0;
+  margin-top: 30px;
   margin-bottom: 5px;
   padding-bottom: 0;
 }
+
 .popup-image {
     max-width: 100%;
     aspect-ratio: 2 / 1;
@@ -309,7 +310,7 @@ input[type="checkbox"] {
 
 #popup-serving-size {
     display: flex;
-    font-size: clamp(9px, 2vw, 16px);
+    font-size: clamp(8px, 2vw, 16px);
     font-weight: normal;
     text-align: left;
     margin-bottom: 5px;
@@ -333,7 +334,7 @@ input[type="checkbox"] {
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
-    font-size: clamp(9px, 2vw, 16px);
+    font-size: clamp(8px, 2vw, 16px);
 }
 
 .tag-columns {
